--- a/css/styles.css
+++ b/css/styles.css
@@ -22,6 +22,8 @@ h6,
 ul,
 ol,
 p,
+div,
+form,
 body {
     margin: 0;
     padding: 0;
@@ -84,6 +86,12 @@ main {
     align-items: center
 }
 
+.address {
+    text-decoration: none;
+    color: currentColor;
+    font-style: inherit;
+}
+
 .addr-li {
     padding: 24px 0;
     font-family: var(--primary-font);
@@ -102,11 +110,11 @@ ol {
     text-decoration: none;
 }
 
-a, address {
+/* a, address {
     text-decoration: none;
     color: currentColor;
     font-style: inherit;
-}
+} */
 
 /* logo header */
 .logo {
@@ -129,6 +137,8 @@ a, address {
 }
 
 .nlist-link {
+    text-decoration: none;
+    font-style: inherit;
     position: relative;
     font-weight: 500;
     font-size: 16px;
@@ -606,8 +616,11 @@ a, address {
     font-weight: 400;
 }
 
-.social-media {
-    margin: 0;
+.fdiv-social {
+    margin-right: 80px;
+}
+
+.fp-social {
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
@@ -646,6 +659,78 @@ a, address {
     fill: var(--btn-active);
 }
 
+
+/* subscribe block */
+
+.fsubs-div {
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+    border: none;
+}
+
+.fsubs-p {
+    margin-bottom: 16px;
+}
+
+.fsubs-input {
+    margin-right: 22px;
+    color: var(--light-color);
+    font-family: Roboto;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px;
+    letter-spacing: 0.48px;
+    width: 264px;
+    height: 40px;
+    flex-shrink: 0;
+    border-radius: 4px;
+    border: 1px solid var(--light-color);
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+    background: var(--main-color);
+    padding: 8px 0 8px 16px ;
+}
+
+.fsubs-input::placeholder {
+    color: var(--light-color);
+    font-family: Roboto;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px;
+    letter-spacing: 0.48px;
+}
+
+.fsubs-btn {
+    font-family: Roboto;
+    text-align: center;
+        /* Button Text */
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 24px;
+    letter-spacing: 0.6px;
+    color: var(--light-color);
+    display: inline-flex;
+    padding: 8px 24px;
+    justify-content: center;
+    align-items: center;
+    gap: 16px;
+    border: none;
+
+    border-radius: 4px;
+    background: var(--logo-color);
+}
+
+.subs-ico {
+    display: inline-block;
+    stroke: currentColor;
+    fill: white;
+}
+
+
+
 /* modal window */
 
 .backdrop {
@@ -666,6 +751,9 @@ a, address {
 }
 
 .modal {
+    display: flex;
+    padding: 24px;
+    flex-direction: column;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -714,4 +802,120 @@ a, address {
 .md-icon:hover,
 .md-icon:focus {
     fill: var(--light-color);
+}
+
+
+.modal-caption {
+    margin:  48px 0 16px 0;
+    padding: 0;
+    display: inline-block;
+    width: 360px;
+    color: var(--main-color);
+    text-align: center;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 24px;
+    letter-spacing: 0.32px;
+}
+
+.modal-form {
+    display: block;
+    height: 100%;
+    margin: 0;
+
+}
+
+.modal-form-field {
+    position: relative;
+    display: block;
+    margin-bottom: 8px;
+}
+
+.modal-form-label {
+    display: block;
+    margin-bottom: 4px;
+    color: #8E8F99;
+    font-family: Roboto;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 14px;
+    letter-spacing: 0.48px;
+}
+
+.modal-form-input {
+    font-size: 18px;
+    display: block;
+    padding: 8px 16px 8px 38px;
+    width: 100%;
+    height: 40px;
+    flex-shrink: 0;
+    border-radius: 4px;
+    border: 1px solid rgba(46, 47, 66, 0.40);
+}
+
+
+.modal-form-input:focus,
+.modal-form-txt:focus {
+    border-radius: 4px;
+    border: 1px solid #4D5AE5;
+}
+
+.modal-form-txt {
+    font-size: 18px;
+    display: block;
+    padding: 8px 16px;
+    width: 100%;
+    height: 120px;
+    flex-shrink: 0;
+    border-radius: 4px;
+    border: 1px solid rgba(46, 47, 66, 0.40);
+}
+
+.modal-form-txt::placeholder {
+    color: var(--navyblue-modal, rgba(46, 47, 66, 0.40));
+    font-family: Roboto;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 14px;
+    letter-spacing: 0.48px;
+}
+ 
+.md-input-icon {
+    position: absolute;
+    bottom: 8px;
+    left: 16px;
+    fill: #2E2F42;
+}
+
+.modal-label-check {
+    display: flex;
+    gap: 8px;
+    margin-top: 16px;
+    margin-bottom: 24px;
+    color: var(--lightslate, #8E8F99);
+    font-family: Roboto;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 14px;
+    letter-spacing: 0.48px;
+}
+
+.a-policy {
+    color: var(--iris, #4D5AE5);
+    font-family: Roboto;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 16px;
+    letter-spacing: 0.48px;
+    text-decoration-line: underline;
+}
+
+ .modal-form-input:focus + .md-input-icon 
+ {
+    fill: var(--logo-color);
 }
