--- a/css/styles.css
+++ b/css/styles.css
@@ -721,7 +721,7 @@ ol {
     font-style: normal;
     font-weight: 500;
     line-height: 1.5;
-    letter-spacing: 0.04px;
+    letter-spacing: 0.04em;
     color: var(--light-color);
     display: inline-flex;
     padding: 8px 24px;
@@ -765,7 +765,7 @@ ol {
 
 .modal {
     display: flex;
-    padding: 24px;
+    padding: 72px 24px 24px 24px;
     flex-direction: column;
     position: absolute;
     top: 50%;
@@ -819,7 +819,7 @@ ol {
 
 
 .modal-caption {
-    margin:  48px 0 16px 0;
+    margin-bottom:  16px;
     padding: 0;
     display: inline-block;
     width: 360px;
