--- a/css/styles.css
+++ b/css/styles.css
@@ -839,39 +839,43 @@ ol {
 
 }
 
-.modal-form-field {
-    position: relative;
-    display: block;
+.form-div {
     margin-bottom: 8px;
+    position: relative;
+}
+
+.div-input-svg {
+    position: relative;
 }
 
 .modal-form-label {
     display: block;
     margin-bottom: 4px;
-    color: #8E8F99;
+    color: var(--grey);
     font-family: Roboto;
     font-size: 12px;
     font-style: normal;
     font-weight: 400;
-    line-height: 14px;
-    letter-spacing: 0.48px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
 }
 
 .modal-form-input {
     font-size: 18px;
     display: block;
-    padding: 8px 16px 8px 38px;
+    padding-left: 38px;
     width: 100%;
     height: 40px;
     flex-shrink: 0;
+    background-color: transparent;
+    outline: transparent;
     border-radius: 4px;
-    border: 1px solid rgba(46, 47, 66, 0.40);
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
 
 .modal-form-input:focus,
 .modal-form-txt:focus {
-    border-radius: 4px;
     border: 1px solid #4D5AE5;
 }
 
@@ -898,8 +902,9 @@ ol {
  
 .md-input-icon {
     position: absolute;
-    bottom: 8px;
+    top: 8px;
     left: 16px;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
     fill: #2E2F42;
 }
 
