--- a/css/styles.css
+++ b/css/styles.css
@@ -841,7 +841,6 @@ ol {
 
 .form-div {
     margin-bottom: 8px;
-    position: relative;
 }
 
 .div-input-svg {
@@ -886,6 +885,7 @@ ol {
     width: 100%;
     height: 120px;
     flex-shrink: 0;
+    outline: transparent;
     border-radius: 4px;
     border: 1px solid rgba(46, 47, 66, 0.40);
 }
@@ -902,9 +902,10 @@ ol {
  
 .md-input-icon {
     position: absolute;
-    top: 8px;
+    top: 50%;
     left: 16px;
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transform: translateY(-50%);
     fill: #2E2F42;
 }
 
