--- a/css/styles.css
+++ b/css/styles.css
@@ -874,23 +874,33 @@ ol {
 }
 
 .modal-form-input:focus,
-.modal-form-txt:focus {
+.modal-comment:focus {
     border: 1px solid #4D5AE5;
 }
 
-.modal-form-txt {
-    font-size: 18px;
+.txtarea-div {
+    margin-bottom: 16px;
+}
+
+.modal-comment {
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: rgba(46, 47, 66, 0.4);
     display: block;
     padding: 8px 16px;
     width: 100%;
     height: 120px;
+    resize: none;
     flex-shrink: 0;
+    background-color: transparent;
     outline: transparent;
     border-radius: 4px;
     border: 1px solid rgba(46, 47, 66, 0.40);
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-form-txt::placeholder {
+.modal-comment::placeholder {
     color: var(--navyblue-modal, rgba(46, 47, 66, 0.40));
     font-family: Roboto;
     font-size: 12px;
@@ -907,6 +917,10 @@ ol {
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
     transform: translateY(-50%);
     fill: #2E2F42;
+}
+
+.checkbox-div {
+    margin-bottom: 24px;
 }
 
 .modal-label-check {
