--- a/css/styles.css
+++ b/css/styles.css
@@ -919,26 +919,15 @@ ol {
     fill: #2E2F42;
 }
 
-.checkbox-div {
+.privacy-div {
     margin-bottom: 24px;
 }
-
-
-
-
-
-
-
-
-
-
-
-
 
 .privacy-label {
     display: flex;
     gap: 8px;
     margin-top: 16px;
+    align-items: center;
     margin-bottom: 24px;
     color: var(--grey);
     font-family: Roboto;
@@ -962,6 +951,13 @@ ol {
                 border 250ms cubic-bezier(0.4, 0, 0.2, 1),
                 fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+.privacy-checkbox:checked + .privacy-label .privacy-span {
+    background-color: var(--btn-hover);
+    border: none;
+    fill: var(--btn-active);
+}
+
 
 .a-policy {
     color: var(--iris, #4D5AE5);
